[package]
name = "wbz_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"] }
derivative = "2.2.0"
thiserror = "1.0.44"
arrayvec = "0.7.4"
log = "0.4.19"
ux = "0.1.5"

fern = { version = "0.6.2", features = ["colored"], optional = true }

[features]
bin = ["fern"]
